--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Etch-a-sketch</title>
   </head>
   <body>
+    <div class="main-container"></div>
     <script src="script.js"></script>
   </body>
 </html>
