--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Etch-a-sketch</title>
   </head>
   <body>
+    <button id="cellsModifyBtn">cell numbers</button>
+
     <div class="main-container"></div>
     <script src="script.js"></script>
   </body>
